// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`metaEngine ranking snapshots > keeps the complete all ranking stable 1`] = `
[
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 1,
    "redsecTtkMs": 596,
    "roleFit": 88,
    "score": 85,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 2,
    "redsecTtkMs": 713,
    "roleFit": 88,
    "score": 84,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 3,
    "redsecTtkMs": 671,
    "roleFit": 84,
    "score": 84,
    "tier": "S",
    "weapon": "DRS-IAR",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 4,
    "redsecTtkMs": 799,
    "roleFit": 88,
    "score": 83,
    "tier": "S",
    "weapon": "L85A3",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 5,
    "redsecTtkMs": 734,
    "roleFit": 86,
    "score": 83,
    "tier": "S",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 6,
    "redsecTtkMs": 833,
    "roleFit": 86,
    "score": 83,
    "tier": "S",
    "weapon": "QBZ-192",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 7,
    "redsecTtkMs": 715,
    "roleFit": 84,
    "score": 83,
    "tier": "S",
    "weapon": "M121 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 8,
    "redsecTtkMs": 682,
    "roleFit": 78,
    "score": 83,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 9,
    "redsecTtkMs": 810,
    "roleFit": 78,
    "score": 83,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 10,
    "redsecTtkMs": 859,
    "roleFit": 78,
    "score": 82,
    "tier": "S",
    "weapon": "PW5A3",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 11,
    "redsecTtkMs": 2834,
    "roleFit": 72,
    "score": 79,
    "tier": "A",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 12,
    "redsecTtkMs": 631,
    "roleFit": 88,
    "score": 77,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 13,
    "redsecTtkMs": 637,
    "roleFit": 88,
    "score": 77,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 14,
    "redsecTtkMs": 712,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 15,
    "redsecTtkMs": 712,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 16,
    "redsecTtkMs": 656,
    "roleFit": 78,
    "score": 76,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 17,
    "redsecTtkMs": 709,
    "roleFit": 78,
    "score": 76,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 18,
    "redsecTtkMs": 786,
    "roleFit": 88,
    "score": 75,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 19,
    "redsecTtkMs": 866,
    "roleFit": 88,
    "score": 75,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 20,
    "redsecTtkMs": 736,
    "roleFit": 86,
    "score": 75,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 21,
    "redsecTtkMs": 792,
    "roleFit": 86,
    "score": 75,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 22,
    "redsecTtkMs": 819,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 23,
    "redsecTtkMs": 795,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 24,
    "redsecTtkMs": 889,
    "roleFit": 88,
    "score": 74,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 25,
    "redsecTtkMs": 862,
    "roleFit": 86,
    "score": 74,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 26,
    "redsecTtkMs": 967,
    "roleFit": 84,
    "score": 74,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 27,
    "redsecTtkMs": 910,
    "roleFit": 84,
    "score": 74,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 28,
    "redsecTtkMs": 964,
    "roleFit": 86,
    "score": 73,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 29,
    "redsecTtkMs": 1017,
    "roleFit": 78,
    "score": 73,
    "tier": "A",
    "weapon": "UMG-40",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 30,
    "redsecTtkMs": 958,
    "roleFit": 78,
    "score": 73,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 31,
    "redsecTtkMs": 2641,
    "roleFit": 62,
    "score": 73,
    "tier": "A",
    "weapon": "M87A1",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 32,
    "redsecTtkMs": 2397,
    "roleFit": 72,
    "score": 72,
    "tier": "A",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 33,
    "redsecTtkMs": 978,
    "roleFit": 80,
    "score": 71,
    "tier": "B",
    "weapon": "M39 EMR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 34,
    "redsecTtkMs": 3207,
    "roleFit": 72,
    "score": 71,
    "tier": "B",
    "weapon": "PSR",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 35,
    "redsecTtkMs": 1061,
    "roleFit": 34,
    "score": 71,
    "tier": "B",
    "weapon": "VZ. 61",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 36,
    "redsecTtkMs": 639,
    "roleFit": 86,
    "score": 68,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 37,
    "redsecTtkMs": 644,
    "roleFit": 84,
    "score": 68,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 38,
    "redsecTtkMs": 781,
    "roleFit": 86,
    "score": 67,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 39,
    "redsecTtkMs": 668,
    "roleFit": 84,
    "score": 67,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 40,
    "redsecTtkMs": 866,
    "roleFit": 84,
    "score": 67,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 41,
    "redsecTtkMs": 840,
    "roleFit": 80,
    "score": 65,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 42,
    "redsecTtkMs": 855,
    "roleFit": 80,
    "score": 64,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 43,
    "redsecTtkMs": 3207,
    "roleFit": 72,
    "score": 64,
    "tier": "B",
    "weapon": "SV-98",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 44,
    "redsecTtkMs": 1239,
    "roleFit": 80,
    "score": 62,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 45,
    "redsecTtkMs": 1488,
    "roleFit": 62,
    "score": 60,
    "tier": "C",
    "weapon": "18.5KS-K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 46,
    "redsecTtkMs": 756,
    "roleFit": 84,
    "score": 59,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 47,
    "redsecTtkMs": 1588,
    "roleFit": 62,
    "score": 58,
    "tier": "C",
    "weapon": "M1014",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 48,
    "redsecTtkMs": 1035,
    "roleFit": 80,
    "score": 55,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 49,
    "redsecTtkMs": 1920,
    "roleFit": 34,
    "score": 52,
    "tier": "C",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 50,
    "redsecTtkMs": 1600,
    "roleFit": 34,
    "score": 51,
    "tier": "C",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 51,
    "redsecTtkMs": 1754,
    "roleFit": 34,
    "score": 50,
    "tier": "C",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 52,
    "redsecTtkMs": 1685,
    "roleFit": 34,
    "score": 50,
    "tier": "C",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 53,
    "redsecTtkMs": 2888,
    "roleFit": 62,
    "score": 49,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 54,
    "redsecTtkMs": 1572,
    "roleFit": 34,
    "score": 41,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 55,
    "redsecTtkMs": 1521,
    "roleFit": 34,
    "score": 41,
    "tier": "D",
    "weapon": "ES 5.7",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete assault ranking stable 1`] = `
[
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 1,
    "redsecTtkMs": 713,
    "roleFit": 96,
    "score": 85,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 2,
    "redsecTtkMs": 596,
    "roleFit": 96,
    "score": 85,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 3,
    "redsecTtkMs": 682,
    "roleFit": 86,
    "score": 85,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 4,
    "redsecTtkMs": 799,
    "roleFit": 96,
    "score": 84,
    "tier": "S",
    "weapon": "L85A3",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 5,
    "redsecTtkMs": 734,
    "roleFit": 88,
    "score": 84,
    "tier": "S",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 6,
    "redsecTtkMs": 833,
    "roleFit": 88,
    "score": 84,
    "tier": "S",
    "weapon": "QBZ-192",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 7,
    "redsecTtkMs": 810,
    "roleFit": 86,
    "score": 84,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 8,
    "redsecTtkMs": 859,
    "roleFit": 86,
    "score": 84,
    "tier": "S",
    "weapon": "PW5A3",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 9,
    "redsecTtkMs": 671,
    "roleFit": 58,
    "score": 82,
    "tier": "S",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 10,
    "redsecTtkMs": 715,
    "roleFit": 58,
    "score": 82,
    "tier": "S",
    "weapon": "M121 A2",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 11,
    "redsecTtkMs": 2834,
    "roleFit": 42,
    "score": 79,
    "tier": "A",
    "weapon": "M2010 ESR",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 12,
    "redsecTtkMs": 656,
    "roleFit": 86,
    "score": 78,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 13,
    "redsecTtkMs": 631,
    "roleFit": 96,
    "score": 77,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 14,
    "redsecTtkMs": 637,
    "roleFit": 96,
    "score": 77,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 15,
    "redsecTtkMs": 712,
    "roleFit": 96,
    "score": 77,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 16,
    "redsecTtkMs": 709,
    "roleFit": 86,
    "score": 77,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 17,
    "redsecTtkMs": 786,
    "roleFit": 96,
    "score": 76,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 18,
    "redsecTtkMs": 866,
    "roleFit": 96,
    "score": 76,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 19,
    "redsecTtkMs": 736,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 20,
    "redsecTtkMs": 792,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 21,
    "redsecTtkMs": 819,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 22,
    "redsecTtkMs": 795,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 23,
    "redsecTtkMs": 958,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 24,
    "redsecTtkMs": 2641,
    "roleFit": 76,
    "score": 76,
    "tier": "A",
    "weapon": "M87A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 25,
    "redsecTtkMs": 889,
    "roleFit": 96,
    "score": 75,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 26,
    "redsecTtkMs": 964,
    "roleFit": 88,
    "score": 75,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 27,
    "redsecTtkMs": 862,
    "roleFit": 88,
    "score": 75,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 28,
    "redsecTtkMs": 1017,
    "roleFit": 86,
    "score": 75,
    "tier": "A",
    "weapon": "UMG-40",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 29,
    "redsecTtkMs": 712,
    "roleFit": 58,
    "score": 73,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 30,
    "redsecTtkMs": 967,
    "roleFit": 58,
    "score": 72,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 31,
    "redsecTtkMs": 910,
    "roleFit": 58,
    "score": 72,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 32,
    "redsecTtkMs": 2397,
    "roleFit": 42,
    "score": 72,
    "tier": "A",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 33,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 71,
    "tier": "B",
    "weapon": "PSR",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 34,
    "redsecTtkMs": 1061,
    "roleFit": 30,
    "score": 71,
    "tier": "B",
    "weapon": "VZ. 61",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 35,
    "redsecTtkMs": 978,
    "roleFit": 56,
    "score": 70,
    "tier": "B",
    "weapon": "M39 EMR",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 36,
    "redsecTtkMs": 639,
    "roleFit": 88,
    "score": 68,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 37,
    "redsecTtkMs": 781,
    "roleFit": 88,
    "score": 68,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 38,
    "redsecTtkMs": 644,
    "roleFit": 58,
    "score": 66,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 39,
    "redsecTtkMs": 668,
    "roleFit": 58,
    "score": 65,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 40,
    "redsecTtkMs": 866,
    "roleFit": 58,
    "score": 65,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 41,
    "redsecTtkMs": 1488,
    "roleFit": 76,
    "score": 64,
    "tier": "B",
    "weapon": "18.5KS-K",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 42,
    "redsecTtkMs": 840,
    "roleFit": 56,
    "score": 64,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 43,
    "redsecTtkMs": 855,
    "roleFit": 56,
    "score": 63,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 44,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 63,
    "tier": "B",
    "weapon": "SV-98",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 45,
    "redsecTtkMs": 1239,
    "roleFit": 56,
    "score": 62,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 46,
    "redsecTtkMs": 1588,
    "roleFit": 76,
    "score": 61,
    "tier": "C",
    "weapon": "M1014",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 47,
    "redsecTtkMs": 756,
    "roleFit": 58,
    "score": 57,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 48,
    "redsecTtkMs": 1035,
    "roleFit": 56,
    "score": 55,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 49,
    "redsecTtkMs": 1920,
    "roleFit": 30,
    "score": 54,
    "tier": "C",
    "weapon": "M44",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 50,
    "redsecTtkMs": 2888,
    "roleFit": 76,
    "score": 53,
    "tier": "C",
    "weapon": "DB-12",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 51,
    "redsecTtkMs": 1754,
    "roleFit": 30,
    "score": 52,
    "tier": "C",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 52,
    "redsecTtkMs": 1600,
    "roleFit": 30,
    "score": 52,
    "tier": "C",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 53,
    "redsecTtkMs": 1685,
    "roleFit": 30,
    "score": 52,
    "tier": "C",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 54,
    "redsecTtkMs": 1572,
    "roleFit": 30,
    "score": 42,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 55,
    "redsecTtkMs": 1521,
    "roleFit": 30,
    "score": 42,
    "tier": "D",
    "weapon": "ES 5.7",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete engineer ranking stable 1`] = `
[
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 1,
    "redsecTtkMs": 734,
    "roleFit": 95,
    "score": 85,
    "tier": "S",
    "weapon": "SG-553R",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 2,
    "redsecTtkMs": 682,
    "roleFit": 90,
    "score": 85,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 3,
    "redsecTtkMs": 810,
    "roleFit": 90,
    "score": 85,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 4,
    "redsecTtkMs": 859,
    "roleFit": 90,
    "score": 85,
    "tier": "S",
    "weapon": "PW5A3",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 5,
    "redsecTtkMs": 833,
    "roleFit": 95,
    "score": 84,
    "tier": "S",
    "weapon": "QBZ-192",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 6,
    "redsecTtkMs": 713,
    "roleFit": 76,
    "score": 84,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 7,
    "redsecTtkMs": 596,
    "roleFit": 76,
    "score": 84,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 8,
    "redsecTtkMs": 799,
    "roleFit": 76,
    "score": 83,
    "tier": "S",
    "weapon": "L85A3",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 9,
    "redsecTtkMs": 671,
    "roleFit": 60,
    "score": 82,
    "tier": "S",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 10,
    "redsecTtkMs": 715,
    "roleFit": 60,
    "score": 81,
    "tier": "S",
    "weapon": "M121 A2",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 11,
    "redsecTtkMs": 2834,
    "roleFit": 46,
    "score": 79,
    "tier": "A",
    "weapon": "M2010 ESR",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 12,
    "redsecTtkMs": 656,
    "roleFit": 90,
    "score": 78,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 13,
    "redsecTtkMs": 736,
    "roleFit": 95,
    "score": 77,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 14,
    "redsecTtkMs": 819,
    "roleFit": 90,
    "score": 77,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 15,
    "redsecTtkMs": 795,
    "roleFit": 90,
    "score": 77,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 16,
    "redsecTtkMs": 709,
    "roleFit": 90,
    "score": 77,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 17,
    "redsecTtkMs": 2641,
    "roleFit": 78,
    "score": 77,
    "tier": "A",
    "weapon": "M87A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 18,
    "redsecTtkMs": 964,
    "roleFit": 95,
    "score": 76,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 19,
    "redsecTtkMs": 862,
    "roleFit": 95,
    "score": 76,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 20,
    "redsecTtkMs": 792,
    "roleFit": 95,
    "score": 76,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 21,
    "redsecTtkMs": 1017,
    "roleFit": 90,
    "score": 76,
    "tier": "A",
    "weapon": "UMG-40",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 22,
    "redsecTtkMs": 958,
    "roleFit": 90,
    "score": 76,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 23,
    "redsecTtkMs": 631,
    "roleFit": 76,
    "score": 76,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 24,
    "redsecTtkMs": 637,
    "roleFit": 76,
    "score": 76,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 25,
    "redsecTtkMs": 712,
    "roleFit": 76,
    "score": 75,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 26,
    "redsecTtkMs": 786,
    "roleFit": 76,
    "score": 75,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 27,
    "redsecTtkMs": 866,
    "roleFit": 76,
    "score": 75,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 28,
    "redsecTtkMs": 889,
    "roleFit": 76,
    "score": 74,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 29,
    "redsecTtkMs": 712,
    "roleFit": 60,
    "score": 73,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 30,
    "redsecTtkMs": 967,
    "roleFit": 60,
    "score": 72,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 31,
    "redsecTtkMs": 910,
    "roleFit": 60,
    "score": 72,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 32,
    "redsecTtkMs": 1061,
    "roleFit": 28,
    "score": 72,
    "tier": "A",
    "weapon": "VZ. 61",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 33,
    "redsecTtkMs": 978,
    "roleFit": 66,
    "score": 71,
    "tier": "B",
    "weapon": "M39 EMR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 34,
    "redsecTtkMs": 2397,
    "roleFit": 46,
    "score": 71,
    "tier": "B",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 35,
    "redsecTtkMs": 3207,
    "roleFit": 46,
    "score": 70,
    "tier": "B",
    "weapon": "PSR",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 36,
    "redsecTtkMs": 639,
    "roleFit": 95,
    "score": 69,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 37,
    "redsecTtkMs": 781,
    "roleFit": 95,
    "score": 69,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 38,
    "redsecTtkMs": 840,
    "roleFit": 66,
    "score": 65,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 39,
    "redsecTtkMs": 644,
    "roleFit": 60,
    "score": 65,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 40,
    "redsecTtkMs": 1488,
    "roleFit": 78,
    "score": 64,
    "tier": "B",
    "weapon": "18.5KS-K",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 41,
    "redsecTtkMs": 855,
    "roleFit": 66,
    "score": 64,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 42,
    "redsecTtkMs": 668,
    "roleFit": 60,
    "score": 64,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 43,
    "redsecTtkMs": 866,
    "roleFit": 60,
    "score": 64,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 44,
    "redsecTtkMs": 3207,
    "roleFit": 46,
    "score": 63,
    "tier": "B",
    "weapon": "SV-98",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 45,
    "redsecTtkMs": 1588,
    "roleFit": 78,
    "score": 62,
    "tier": "B",
    "weapon": "M1014",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 46,
    "redsecTtkMs": 1239,
    "roleFit": 66,
    "score": 62,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 47,
    "redsecTtkMs": 756,
    "roleFit": 60,
    "score": 57,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 48,
    "redsecTtkMs": 1035,
    "roleFit": 66,
    "score": 56,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 49,
    "redsecTtkMs": 2888,
    "roleFit": 78,
    "score": 54,
    "tier": "C",
    "weapon": "DB-12",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 50,
    "redsecTtkMs": 1920,
    "roleFit": 28,
    "score": 53,
    "tier": "C",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 51,
    "redsecTtkMs": 1600,
    "roleFit": 28,
    "score": 53,
    "tier": "C",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 52,
    "redsecTtkMs": 1685,
    "roleFit": 28,
    "score": 53,
    "tier": "C",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 53,
    "redsecTtkMs": 1754,
    "roleFit": 28,
    "score": 52,
    "tier": "C",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 54,
    "redsecTtkMs": 1572,
    "roleFit": 28,
    "score": 43,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 55,
    "redsecTtkMs": 1521,
    "roleFit": 28,
    "score": 43,
    "tier": "D",
    "weapon": "ES 5.7",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete recon ranking stable 1`] = `
[
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 1,
    "redsecTtkMs": 2834,
    "roleFit": 98,
    "score": 85,
    "tier": "S",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 2,
    "redsecTtkMs": 833,
    "roleFit": 55,
    "score": 82,
    "tier": "S",
    "weapon": "QBZ-192",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 3,
    "redsecTtkMs": 713,
    "roleFit": 45,
    "score": 82,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 4,
    "redsecTtkMs": 596,
    "roleFit": 45,
    "score": 82,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 5,
    "redsecTtkMs": 671,
    "roleFit": 44,
    "score": 82,
    "tier": "S",
    "weapon": "DRS-IAR",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 6,
    "redsecTtkMs": 734,
    "roleFit": 55,
    "score": 81,
    "tier": "S",
    "weapon": "SG-553R",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 7,
    "redsecTtkMs": 799,
    "roleFit": 45,
    "score": 81,
    "tier": "S",
    "weapon": "L85A3",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 8,
    "redsecTtkMs": 715,
    "roleFit": 44,
    "score": 81,
    "tier": "S",
    "weapon": "M121 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 9,
    "redsecTtkMs": 682,
    "roleFit": 34,
    "score": 80,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 10,
    "redsecTtkMs": 810,
    "roleFit": 34,
    "score": 80,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 11,
    "redsecTtkMs": 859,
    "roleFit": 34,
    "score": 80,
    "tier": "S",
    "weapon": "PW5A3",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 12,
    "redsecTtkMs": 2397,
    "roleFit": 98,
    "score": 77,
    "tier": "A",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 13,
    "redsecTtkMs": 3207,
    "roleFit": 98,
    "score": 77,
    "tier": "A",
    "weapon": "PSR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 14,
    "redsecTtkMs": 978,
    "roleFit": 100,
    "score": 76,
    "tier": "A",
    "weapon": "M39 EMR",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 15,
    "redsecTtkMs": 2641,
    "roleFit": 46,
    "score": 75,
    "tier": "A",
    "weapon": "M87A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 16,
    "redsecTtkMs": 964,
    "roleFit": 55,
    "score": 74,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 17,
    "redsecTtkMs": 736,
    "roleFit": 55,
    "score": 74,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 18,
    "redsecTtkMs": 631,
    "roleFit": 45,
    "score": 74,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 19,
    "redsecTtkMs": 712,
    "roleFit": 45,
    "score": 74,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 20,
    "redsecTtkMs": 712,
    "roleFit": 44,
    "score": 74,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 21,
    "redsecTtkMs": 967,
    "roleFit": 44,
    "score": 74,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 22,
    "redsecTtkMs": 862,
    "roleFit": 55,
    "score": 73,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 23,
    "redsecTtkMs": 792,
    "roleFit": 55,
    "score": 73,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 24,
    "redsecTtkMs": 889,
    "roleFit": 45,
    "score": 73,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 25,
    "redsecTtkMs": 637,
    "roleFit": 45,
    "score": 73,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 26,
    "redsecTtkMs": 786,
    "roleFit": 45,
    "score": 73,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 27,
    "redsecTtkMs": 866,
    "roleFit": 45,
    "score": 73,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 28,
    "redsecTtkMs": 910,
    "roleFit": 44,
    "score": 73,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 29,
    "redsecTtkMs": 819,
    "roleFit": 34,
    "score": 73,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 30,
    "redsecTtkMs": 656,
    "roleFit": 34,
    "score": 72,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 31,
    "redsecTtkMs": 795,
    "roleFit": 34,
    "score": 72,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 32,
    "redsecTtkMs": 709,
    "roleFit": 34,
    "score": 72,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 33,
    "redsecTtkMs": 958,
    "roleFit": 34,
    "score": 72,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 34,
    "redsecTtkMs": 1017,
    "roleFit": 34,
    "score": 71,
    "tier": "B",
    "weapon": "UMG-40",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 35,
    "redsecTtkMs": 1061,
    "roleFit": 34,
    "score": 71,
    "tier": "B",
    "weapon": "VZ. 61",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 36,
    "redsecTtkMs": 840,
    "roleFit": 100,
    "score": 69,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 37,
    "redsecTtkMs": 3207,
    "roleFit": 98,
    "score": 69,
    "tier": "B",
    "weapon": "SV-98",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 38,
    "redsecTtkMs": 855,
    "roleFit": 100,
    "score": 68,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 39,
    "redsecTtkMs": 1239,
    "roleFit": 100,
    "score": 67,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 40,
    "redsecTtkMs": 639,
    "roleFit": 55,
    "score": 66,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 41,
    "redsecTtkMs": 781,
    "roleFit": 55,
    "score": 66,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 42,
    "redsecTtkMs": 668,
    "roleFit": 44,
    "score": 66,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 43,
    "redsecTtkMs": 644,
    "roleFit": 44,
    "score": 66,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 44,
    "redsecTtkMs": 866,
    "roleFit": 44,
    "score": 65,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 45,
    "redsecTtkMs": 1035,
    "roleFit": 100,
    "score": 60,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 46,
    "redsecTtkMs": 1488,
    "roleFit": 46,
    "score": 60,
    "tier": "C",
    "weapon": "18.5KS-K",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 47,
    "redsecTtkMs": 1588,
    "roleFit": 46,
    "score": 59,
    "tier": "C",
    "weapon": "M1014",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 48,
    "redsecTtkMs": 756,
    "roleFit": 44,
    "score": 57,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 49,
    "redsecTtkMs": 1754,
    "roleFit": 34,
    "score": 52,
    "tier": "C",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 50,
    "redsecTtkMs": 1600,
    "roleFit": 34,
    "score": 52,
    "tier": "C",
    "weapon": "P18",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 51,
    "redsecTtkMs": 2888,
    "roleFit": 46,
    "score": 51,
    "tier": "C",
    "weapon": "DB-12",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 52,
    "redsecTtkMs": 1920,
    "roleFit": 34,
    "score": 51,
    "tier": "C",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 53,
    "redsecTtkMs": 1685,
    "roleFit": 34,
    "score": 51,
    "tier": "C",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 54,
    "redsecTtkMs": 1521,
    "roleFit": 34,
    "score": 43,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 55,
    "redsecTtkMs": 1572,
    "roleFit": 34,
    "score": 42,
    "tier": "D",
    "weapon": "M45A1",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete support ranking stable 1`] = `
[
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 1,
    "redsecTtkMs": 713,
    "roleFit": 84,
    "score": 85,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 2,
    "redsecTtkMs": 596,
    "roleFit": 84,
    "score": 85,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 3,
    "redsecTtkMs": 671,
    "roleFit": 97,
    "score": 84,
    "tier": "S",
    "weapon": "DRS-IAR",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 4,
    "redsecTtkMs": 799,
    "roleFit": 84,
    "score": 84,
    "tier": "S",
    "weapon": "L85A3",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 5,
    "redsecTtkMs": 715,
    "roleFit": 97,
    "score": 83,
    "tier": "S",
    "weapon": "M121 A2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 6,
    "redsecTtkMs": 734,
    "roleFit": 78,
    "score": 83,
    "tier": "S",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 7,
    "redsecTtkMs": 833,
    "roleFit": 78,
    "score": 83,
    "tier": "S",
    "weapon": "QBZ-192",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 8,
    "redsecTtkMs": 682,
    "roleFit": 70,
    "score": 83,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 9,
    "redsecTtkMs": 810,
    "roleFit": 70,
    "score": 83,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 10,
    "redsecTtkMs": 859,
    "roleFit": 70,
    "score": 83,
    "tier": "S",
    "weapon": "PW5A3",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 11,
    "redsecTtkMs": 2834,
    "roleFit": 42,
    "score": 78,
    "tier": "A",
    "weapon": "M2010 ESR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 12,
    "redsecTtkMs": 712,
    "roleFit": 97,
    "score": 77,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 13,
    "redsecTtkMs": 967,
    "roleFit": 97,
    "score": 76,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 14,
    "redsecTtkMs": 631,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 15,
    "redsecTtkMs": 637,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 16,
    "redsecTtkMs": 712,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 17,
    "redsecTtkMs": 786,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 18,
    "redsecTtkMs": 736,
    "roleFit": 78,
    "score": 76,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 19,
    "redsecTtkMs": 795,
    "roleFit": 70,
    "score": 76,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 20,
    "redsecTtkMs": 2641,
    "roleFit": 48,
    "score": 76,
    "tier": "A",
    "weapon": "M87A1",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 21,
    "redsecTtkMs": 910,
    "roleFit": 97,
    "score": 75,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 22,
    "redsecTtkMs": 889,
    "roleFit": 84,
    "score": 75,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 23,
    "redsecTtkMs": 866,
    "roleFit": 84,
    "score": 75,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 24,
    "redsecTtkMs": 964,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 25,
    "redsecTtkMs": 862,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 26,
    "redsecTtkMs": 792,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 27,
    "redsecTtkMs": 656,
    "roleFit": 70,
    "score": 75,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 28,
    "redsecTtkMs": 819,
    "roleFit": 70,
    "score": 75,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 29,
    "redsecTtkMs": 709,
    "roleFit": 70,
    "score": 75,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 30,
    "redsecTtkMs": 1017,
    "roleFit": 70,
    "score": 74,
    "tier": "A",
    "weapon": "UMG-40",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 31,
    "redsecTtkMs": 958,
    "roleFit": 70,
    "score": 74,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 32,
    "redsecTtkMs": 978,
    "roleFit": 72,
    "score": 73,
    "tier": "A",
    "weapon": "M39 EMR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 33,
    "redsecTtkMs": 2397,
    "roleFit": 42,
    "score": 71,
    "tier": "B",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 34,
    "redsecTtkMs": 1061,
    "roleFit": 28,
    "score": 71,
    "tier": "B",
    "weapon": "VZ. 61",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 35,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 70,
    "tier": "B",
    "weapon": "PSR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 36,
    "redsecTtkMs": 644,
    "roleFit": 97,
    "score": 69,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 37,
    "redsecTtkMs": 668,
    "roleFit": 97,
    "score": 68,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 38,
    "redsecTtkMs": 866,
    "roleFit": 97,
    "score": 68,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 39,
    "redsecTtkMs": 639,
    "roleFit": 78,
    "score": 68,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 40,
    "redsecTtkMs": 781,
    "roleFit": 78,
    "score": 67,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 41,
    "redsecTtkMs": 840,
    "roleFit": 72,
    "score": 66,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 42,
    "redsecTtkMs": 855,
    "roleFit": 72,
    "score": 65,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 43,
    "redsecTtkMs": 1239,
    "roleFit": 72,
    "score": 63,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 44,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 63,
    "tier": "B",
    "weapon": "SV-98",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 45,
    "redsecTtkMs": 1488,
    "roleFit": 48,
    "score": 61,
    "tier": "C",
    "weapon": "18.5KS-K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 46,
    "redsecTtkMs": 756,
    "roleFit": 97,
    "score": 60,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 47,
    "redsecTtkMs": 1588,
    "roleFit": 48,
    "score": 60,
    "tier": "C",
    "weapon": "M1014",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 48,
    "redsecTtkMs": 1035,
    "roleFit": 72,
    "score": 57,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 49,
    "redsecTtkMs": 2888,
    "roleFit": 48,
    "score": 52,
    "tier": "C",
    "weapon": "DB-12",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 50,
    "redsecTtkMs": 1754,
    "roleFit": 28,
    "score": 52,
    "tier": "C",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 51,
    "redsecTtkMs": 1600,
    "roleFit": 28,
    "score": 52,
    "tier": "C",
    "weapon": "P18",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 52,
    "redsecTtkMs": 1920,
    "roleFit": 28,
    "score": 51,
    "tier": "C",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 53,
    "redsecTtkMs": 1685,
    "roleFit": 28,
    "score": 51,
    "tier": "C",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 54,
    "redsecTtkMs": 1521,
    "roleFit": 28,
    "score": 43,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 55,
    "redsecTtkMs": 1572,
    "roleFit": 28,
    "score": 42,
    "tier": "D",
    "weapon": "M45A1",
  },
]
`;
